// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LogBoxButton should render TouchableWithoutFeedback and pass through props 1`] = `
<TouchableWithoutFeedback
  hitSlop={Object {}}
  onPress={[Function]}
  onPressIn={[Function]}
  onPressOut={[Function]}
>
  <View
    style={
      Object {
        "backgroundColor": "black",
      }
    }
  >
    <Text>
      Press me
    </Text>
  </View>
</TouchableWithoutFeedback>
`;

exports[`LogBoxButton should render only a view without an onPress 1`] = `
<View
  style={
    Object {
      "backgroundColor": "black",
    }
  }
>
  <Text>
    Press me
  </Text>
</View>
`;
